--- a/index/about/index.html
+++ b/index/about/index.html
@@ -101,7 +101,7 @@ flexibility(document.documentElement);
 <div
 class="hfeed site" id="page">
 			<header id="masthead" itemscope="itemscope" itemtype="https://schema.org/WPHeader">
-			<p class="main-title bhf-hidden" itemprop="headline"><a href="/" title="theticketmaster" rel="home">theticketmaster</a></p>
+			<p class="main-title bhf-hidden" itemprop="headline"><a href="https://mcwg-dotcom.github.io/theticketmaster/" title="theticketmaster" rel="home">theticketmaster</a></p>
 					<div data-elementor-type="wp-post" data-elementor-id="1075" class="elementor elementor-1075">
 									<section class="has_eae_slider elementor-section elementor-top-section elementor-element elementor-element-4048473 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="4048473" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
