--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@ flexibility(document.documentElement);
 
   gtag('config', 'AW-16640520520');
 </script>
+<!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-16640520520/d-KcCJ2h9MEZEMji6P49'});
+</script>
 </head>
 
 <body itemtype='https://schema.org/WebPage' itemscope='itemscope' class="home page-template-default page page-id-1059 wp-custom-logo ehf-header ehf-footer ehf-template-astra ehf-stylesheet-astra ast-header-break-point ast-page-builder-template ast-no-sidebar astra-4.1.3 ast-single-post ast-replace-site-logo-transparent ast-inherit-site-logo-transparent ast-theme-transparent-header ast-hfb-header ast-full-width-primary-header elementor-default elementor-kit-800 elementor-page elementor-page-1059">
